relatively large refactoring to get ConstantRange_0 working smoothly. Replaced the system to re-evaluate return values, excluded dead branches from merging